{
  "version": 4,
  "terraform_version": "1.0.1",
  "serial": 44,
  "lineage": "cfb78899-1d23-62a3-da52-9dc907f160f0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01599cb8b5d301336",
            "arn": "arn:aws:ec2:sa-east-1:808209398785:instance/i-0b9c1a1a0a7e40001",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9c1a1a0a7e40001",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06bba780212bdc485",
            "private_dns": "ip-172-31-32-90.sa-east-1.compute.internal",
            "private_ip": "172.31.32.90",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0a821230e58e1504d",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1a4b2a41",
            "tags": {
              "Name": "instance-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027777efee9624687"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01599cb8b5d301336",
            "arn": "arn:aws:ec2:sa-east-1:808209398785:instance/i-01cf80eb303f74601",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01cf80eb303f74601",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06ec5af652562d5e4",
            "private_dns": "ip-172-31-45-198.sa-east-1.compute.internal",
            "private_ip": "172.31.45.198",
            "public_dns": "ec2-15-228-57-178.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.228.57.178",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0c99d35093791ee45",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1a4b2a41",
            "tags": {
              "Name": "instance-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027777efee9624687"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01599cb8b5d301336",
            "arn": "arn:aws:ec2:sa-east-1:808209398785:instance/i-045021242ceab198f",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-045021242ceab198f",
            "instance_state": "stopped",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2ab804779c57486",
            "private_dns": "ip-172-31-37-54.sa-east-1.compute.internal",
            "private_ip": "172.31.37.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-0f78b127c2aaad99d",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1a4b2a41",
            "tags": {
              "Name": "instance-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027777efee9624687"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01599cb8b5d301336",
            "arn": "arn:aws:ec2:sa-east-1:808209398785:instance/i-07216ced9540c6879",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07216ced9540c6879",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e96a0cf80e0eec77",
            "private_dns": "ip-172-31-6-181.sa-east-1.compute.internal",
            "private_ip": "172.31.6.181",
            "public_dns": "ec2-18-230-6-23.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.230.6.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-08cc00604f7b41237",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1822b97e",
            "tags": {
              "Name": "instance-4"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027777efee9624687"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.instance-4",
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01599cb8b5d301336",
            "arn": "arn:aws:ec2:sa-east-1:808209398785:instance/i-062fbda2e3a376d34",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062fbda2e3a376d34",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0557d663e8e3ba2de",
            "private_dns": "ip-172-31-12-61.sa-east-1.compute.internal",
            "private_ip": "172.31.12.61",
            "public_dns": "ec2-18-228-172-78.sa-east-1.compute.amazonaws.com",
            "public_ip": "18.228.172.78",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 300,
                "volume_id": "vol-04265c35a0e5fac7b",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1822b97e",
            "tags": {
              "Name": "instance-5"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-027777efee9624687"
            ]
          },
          "dependencies": [
            "aws_security_group.acesso_ssh"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:808209398785:instance/i-0c5adf9b1b7677508",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5adf9b1b7677508",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d54eede953b8484c",
            "private_dns": "ip-172-31-37-224.us-east-2.compute.internal",
            "private_ip": "172.31.37.224",
            "public_dns": "ec2-3-15-170-186.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.170.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e87952101ec8ae54",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-6688cb2a",
            "tags": {
              "Name": "instance-6"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cd5ef4e8fefd577d"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homologacao",
            "aws_security_group.acesso_ssh_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:808209398785:instance/i-0bfc2f0b9c99bb682",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bfc2f0b9c99bb682",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-aws",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-045eb8c69cddf7a24",
            "private_dns": "ip-172-31-3-235.us-east-2.compute.internal",
            "private_ip": "172.31.3.235",
            "public_dns": "ec2-3-21-44-29.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.44.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0489085e5258106a1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "allow_tls"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1010b27b",
            "tags": {
              "Name": "instance-7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0cd5ef4e8fefd577d"
            ]
          },
          "dependencies": [
            "aws_dynamodb_table.dynamodb-homologacao",
            "aws_security_group.acesso_ssh_us_east_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:808209398785:security-group/sg-027777efee9624687",
            "description": "Allow tls inbound traffic",
            "egress": [],
            "id": "sg-027777efee9624687",
            "ingress": [
              {
                "cidr_blocks": [
                  "200.158.90.215/32",
                  "200.158.90.215/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": null,
            "owner_id": "808209398785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-6c957c0a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "acesso_ssh_us_east_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808209398785:security-group/sg-0cd5ef4e8fefd577d",
            "description": "Allow tls inbound traffic",
            "egress": [],
            "id": "sg-0cd5ef4e8fefd577d",
            "ingress": [
              {
                "cidr_blocks": [
                  "200.158.90.215/32",
                  "200.158.90.215/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": null,
            "owner_id": "808209398785",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-c63983ad"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}